get destination stats
